--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,2 +1,10 @@
 extends base.pug
+include mixins/video
 
+
+block content
+    h1 Welcome to wetube !!
+    each x in videos
+        +video(x)
+    else
+        li sorry nothing found.
