#6.3 Edit Video part Two (14:44)
영상은 30분인데.. 놀면서 하다보니 3시간이 넘게 걸리네...

마지막에 결과 나오는건 신기하다.. 혼자하라면 아직 못하는 단계..

--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -6,4 +6,4 @@ mixin video(x)
             li #{x.rating}/5
             li #{x.comments} comments 
             li Posted #{x.createdAt}
-            li #{x.views} views
+            li #{x.views} #{x.views === 1 ? "view" : "views"}
