--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,4 +1,7 @@
 extends base.pug
 
 block content
-    h1 Welcome to edit page!
+    h3 Change Title of Video
+    form(method="POST")
+        input(name="title" placeholder=`${video.title}` value=`${video.title}`)
+        input(value="Save", type="submit")
