--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -4,4 +4,7 @@ extends base
 //- +video(x) 
     
 block content
-    h2=video.title
+    h3 #{video.views} #{video.views === 1 ? "view" : "views"}
+    a(href=`${video.id}/edit`) Edit Video &rarr; 
+
+    
