--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -4,8 +4,13 @@ html(lang='ko')
         title #{pageTitle} | Wetube
         link(rel="stylesheet" href="https://unpkg.com/mvp.css") 
     body
-        h4=pageTitle
+        header
+            h1=pageTitle
+            nav
+                ul
+                    li 
+                        a(href="/videos/upload") Upload Video
         main
             block content
-        include partials/footer
+    include partials/footer
         
