--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -2,5 +2,5 @@ extends base
 
 block content 
     form(method="POST")
-        input(name="", placeholder="Title" required, type="text")
+        input(name="title", placeholder="Title" required, type="text")
         input(type="submit", value="Upload Video")
