#2022.03.17 데이터 저장 및 표시 첫 성공

--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,4 +3,6 @@ extends base
 block content 
     form(method="POST")
         input(name="title", placeholder="Title" required, type="text")
+        input(name="description", placeholder="description" required, type="text")
+        input(name="hashtags", placeholder="hashtags" required, type="text")
         input(type="submit", value="Upload Video")
