--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,10 @@
 extends base
 
+
+
 block content 
+    if errorMessage
+        span=#{errorMessage}
     form(method="POST")
         input(name="title", placeholder="Title" required, type="text")
         input(name="description", placeholder="description" required, type="text")
